@@ -12,6 +12,7 @@ version <next>:
 - afir audio filter
 - scale_cuda CUDA based video scale filter
 - librsvg support for svg rasterization
+- crossfeed audio filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
